objects/Milestone1_Project__c.object
<CustomObject>
    <fields>
        <fullName>Status_TasksOpenBlockedLate__c</fullName>
        <formula>IF(max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) &gt; 0 , 
&quot;http://chart.apis.google.com/chart?chtt=Open+Task+Analysis&amp;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ))&amp;&quot;&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322&amp;chdl=&quot;&amp;
&quot;Open (&quot; &amp; TEXT(Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Late (&quot; &amp; TEXT(Total_Late_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Blocked (&quot; &amp; TEXT(Total_Blocked_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp; TEXT(Total_Open_Task_Count__c / max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100)&amp;&quot;|&quot;&amp; TEXT(Total_Late_Task_Count__c/ max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100) &amp;&quot;|&quot; &amp; TEXT(Total_Blocked_Task_Count__c/ max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100), &apos;/s.gif&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_TasksOpenComplete__c</fullName>
        <formula>&quot;http://chart.apis.google.com/chart?&quot;&amp;
&quot;chtt=Task+Analysis&amp;&quot;&amp;
&quot;chco=eeaa66,2299bb&amp;chs=300x225&amp;cht=p&amp;chd=t:&quot;&amp;Text(Total_Open_Task_Count__c)&amp;&quot;,&quot;&amp;Text(Total_Complete_Task_Count__c)&amp;&quot;&amp;chdl=&quot;&amp;
&quot;Open%20Tasks (&quot; &amp; TEXT (Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Complete%20Tasks (&quot; &amp; TEXT (Total_Complete_Task_Count__c) &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The current status of the project.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Region_del__c</fullName>
        <description>Proforce Dev 091415</description>
        <formula>Country__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Account Ship to Sub-region</inlineHelpText>
        <label>Sub-Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>Intended for use in project reporting to allow greater organization</description>
        <inlineHelpText>This is not a mandatory field and is intended for use in project reporting.</inlineHelpText>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Funded Development</fullName>
                </value>
                <value>
                    <fullName>PMO Implementation</fullName>
                </value>
                <value>
                    <fullName>Internal Time Tracking</fullName>
                </value>
                <value>
                    <fullName>Services/Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Blocked_Task_Count__c</fullName>
        <inlineHelpText>How many tasks associated with this project are blocked? (Calculated)</inlineHelpText>
        <label>Total Blocked Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Complete_Task_Count__c</fullName>
        <inlineHelpText>How many complete tasks are there in this project?  (Calculated.)</inlineHelpText>
        <label>Total Complete Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Budget__c</fullName>
        <inlineHelpText>The total expense budget for this project.</inlineHelpText>
        <label>Total Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Budget_from_Milestones__c</fullName>
        <inlineHelpText>Calculated from the milestone expense budgets assigned to this project.</inlineHelpText>
        <label>Total Expense Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Estimate__c</fullName>
        <inlineHelpText>Calculated from expense estimates on all child milestones</inlineHelpText>
        <label>Total Expense Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Incurred__c</fullName>
        <inlineHelpText>Calculated from expense records related to tasks on all child milestones</inlineHelpText>
        <label>Total Expense Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Budget__c</fullName>
        <inlineHelpText>The total hours budget for this project.</inlineHelpText>
        <label>Total Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Budget_from_Milestones__c</fullName>
        <inlineHelpText>Calculated from hours budgets for milestones in this project.</inlineHelpText>
        <label>Total Hours Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Estimate__c</fullName>
        <inlineHelpText>Calculated from hours estimates on all child milestones</inlineHelpText>
        <label>Total Hours Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Incurred__c</fullName>
        <inlineHelpText>Calculated from time records related to tasks on all child milestones</inlineHelpText>
        <label>Total Hours Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Remain__c</fullName>
        <description>Project beta 09_14</description>
        <formula>Total_Hours_Estimate__c  -  Total_Hours_Incurred__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Hours Remaining</inlineHelpText>
        <label>Total Hours Remain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Late_Task_Count__c</fullName>
        <inlineHelpText>How many tasks associated with this project are late?  (Calculated)</inlineHelpText>
        <label>Total Late Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Open_Revenue__c</fullName>
        <description>A helper field specifically for project reporting that groups up all the remaining open items.</description>
        <formula>Open_Hardware_Networking__c + Open_Hardware_Playout__c  + Open_Hardware_Distribution__c + Open_Professional_Services__c +  Open_Hardware_Media__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Open Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Open_Task_Count__c</fullName>
        <inlineHelpText>How many open tasks are there in this project? (Calculated. Includes Late and Blocked tasks.)</inlineHelpText>
        <label>Total Open Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_USD__c</fullName>
        <description>Proforce Dev 091514</description>
        <inlineHelpText>Total Revenue USD Rollup</inlineHelpText>
        <label>Total Revenue USD</label>
        <summarizedField>Order__c.USD_Net_Sum__c</summarizedField>
        <summaryForeignKey>Order__c.Old_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <formula>Closed_CARE__c +  
Closed_Hardware_Distribution__c +
Closed_Hardware_Media__c  + 
Closed_Hardware_Networking__c +  
Closed_Hardware_Playout__c  + 
Closed_Professional_Services__c +  
Open_CARE__c +  
Open_Hardware_Distribution__c +  
Open_Hardware_Media__c +  
Open_Hardware_Networking__c + 
Open_Hardware_Playout__c + 
Open_Professional_Services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Old Project</label>
    <nameField>
        <label>Old Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Old Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>